--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "jsdom": "^17.0.0",
     "mime": "^2.5.2",
+    "mongodb": "^4.1.3",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
     "octokit": "^1.5.0",
