--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "node-schedule": "^2.0.0",
     "octokit": "^1.5.0",
     "pdfjs-dist": "^2.9.359",
+    "postgresql-client": "^1.21.2",
     "puppeteer": "^7.1.0",
     "puppeteer-extra": "^3.1.17",
     "puppeteer-extra-plugin-stealth": "^2.7.5",
