--- a/ops/roles/ota/vars/main.yml
+++ b/ops/roles/ota/vars/main.yml
@@ -1,10 +1,10 @@
 app: ota
 repository: https://github.com/ambanum/OpenTermsArchive.git
-services_directory: ota-services-all
-services_repository: https://github.com/OpenTermsArchive/services-all.git
-snapshots_directory: ota-snapshots
-snapshots_repository: git@github.com:ambanum/OpenTermsArchive-snapshots.git
-snapshots_branch: master
-versions_directory: ota-versions
-versions_repository: git@github.com:ambanum/OpenTermsArchive-versions.git
-versions_branch: master
+services_directory: ota-services-dating
+services_repository: https://github.com/OpenTermsArchive/services-dating.git
+snapshots_directory: ota-snapshots-dating
+snapshots_repository: git@github.com:OpenTermsArchive/snapshots-dating.git
+snapshots_branch: main
+versions_directory: ota-versions-dating
+versions_repository: git@github.com:OpenTermsArchive/versions-dating.git
+versions_branch: main
