--- a/ops/roles/ota/vars/main.yml
+++ b/ops/roles/ota/vars/main.yml
@@ -1,5 +1,6 @@
 app: ota
-repository: https://github.com/ambanum/OpenTermsArchive.git
+archivist_repository: https://github.com/ambanum/OpenTermsArchive.git
+archivist_version: dating
 services_directory: ota-services-dating
 services_repository: https://github.com/OpenTermsArchive/services-dating.git
 snapshots_directory: ota-snapshots-dating
