--- a/ops/inventories/dev-applesilicon.yaml
+++ b/ops/inventories/dev-applesilicon.yaml
@@ -7,3 +7,4 @@ all:
           ansible_user: vagrant
           ansible_ssh_private_key_file: .vagrant/machines/default/docker/private_key
           ansible_ssh_extra_args: -o StrictHostKeyChecking=no -o IdentitiesOnly=yes
+          # ansible_python_interpreter: /usr/bin/python3
