--- a/ops/roles/infra/tasks/main.yml
+++ b/ops/roles/infra/tasks/main.yml
@@ -53,7 +53,7 @@
     state: latest
 
   # See https://github.com/puppeteer/puppeteer/blob/main/docs/troubleshooting.md#recommended-enable-user-namespace-cloning
-- name: Enable user namespace cloning to allow running Chromium in a sandbox
-  command: sysctl -w kernel.unprivileged_userns_clone=1
+# - name: Enable user namespace cloning to allow running Chromium in a sandbox
+#   command: sysctl -w kernel.unprivileged_userns_clone=1
 
 - include_tasks: mongo.yml
