--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "scripts": {
     "start": "node --max-http-header-size=32768 src/index.js",
     "start:scheduler": "node --max-http-header-size=32768 src/index.js --schedule",
-    "test": "cross-env NODE_ENV=test mocha --recursive \"./src/**/*.test.js\" --exit",
+    "test": "cross-env NODE_ENV=test mocha --recursive \"./src/**/*.test.js\" \"./scripts/**/*.test.js\" --exit",
     "test:debug": "npm run test -- --inspect-brk --exit",
     "posttest": "npm run lint",
     "lint": "eslint src test scripts bin",
     "lint:fix": "npm run lint -- --fix",
     "validate": "node ./bin/validate.js",
     "validate:schema": "npm run validate -- --schema-only",
-    "export": "node scripts/export/makedataset.js",
+    "export": "node scripts/export/main.js",
     "release": "node scripts/release/build_release.js",
     "refilter": "node src/index.js --refilter-only"
   },
@@ -32,11 +32,13 @@
   },
   "homepage": "https://github.com/ambanum/OpenTermsArchive#readme",
   "devDependencies": {
+    "dir-compare": "^4.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-import": "^2.25.3",
     "nock": "^13.2.1",
+    "node-stream-zip": "^1.15.0",
     "prettier": "^2.2.1",
     "sinon": "^12.0.1",
     "sinon-chai": "^3.7.0"
@@ -46,6 +48,7 @@
     "@accordproject/markdown-pdf": "^0.14.1",
     "abort-controller": "^3.0.0",
     "ajv": "^6.12.6",
+    "archiver": "^5.3.0",
     "async": "^3.2.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
