Add script to release a dataset

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "lint:fix": "npm run lint -- --fix",
     "validate": "node ./bin/validate.js",
     "validate:schema": "npm run validate -- --schema-only",
-    "export": "node scripts/export/main.js",
-    "release": "node scripts/release/build_release.js",
+    "dataset:export": "node scripts/dataset/main.js",
+    "dataset:release": "node scripts/dataset/main.js --publish --remove-local-copy",
+    "dataset:scheduler": "node scripts/dataset/main.js --schedule --publish --remove-local-copy",
     "refilter": "node src/index.js --refilter-only"
   },
   "repository": {
