--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "lint:fix": "npm run lint -- --fix",
     "validate": "node ./bin/validate.js",
     "validate:schema": "npm run validate -- --schema-only",
-    "dataset:export": "node scripts/dataset/main.js",
+    "dataset:generate": "node scripts/dataset/main.js",
     "dataset:release": "node scripts/dataset/main.js --publish --remove-local-copy",
-    "dataset:scheduler": "node scripts/dataset/main.js --schedule --publish --remove-local-copy",
+    "dataset:scheduler": "npm run dataset:release -- --schedule",
     "refilter": "node src/index.js --refilter-only"
   },
   "repository": {
